--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,10 @@
 		 	</div>
 	  </div>
 	</nav>
+  <br/>
+  <div class="text-right">
+    User: <strong><%= @user.username%></strong>
+  </div>
 	<div id="main-container" class="container">
 		<%= yield %>
 	</div>
