--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,6 +3,7 @@
 <% if flash[:alert] %>
   <div class="alert alert-<%= flash[:alert_type] %>" role="alert">
   <%= flash[:alert] %>
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
 </div>
 <% end %>
 <div class="panel panel-primary">
@@ -10,30 +11,25 @@
   Products
   </div>  
   <div class="panel-body">
-    <table class="table table-hover">
-    <thead>
-        
-        <th>Name</th>
-        <th>Category</th>
-        <th>Stock</th>
-        <th>Price</th>
-        <th>Options</th>
-    </thead>
-    <tbody>
+    
       <% @products_list.each_with_index do |p, index| %>
-        <tr>
-            
-            <td><%= p.name %>
-             <br/><div class="small text-muted">SKU: <%= p.sku%></div>   
-            </td> 
-            <td><%= p.category.name %></td> 
-            <td><%= p.stock %></td> 
-            <td>$ <%= p.price.round(2) %></td> 
-            <td><a href="/products/show?id_product=<%=p.id%>" class="btn btn-success">Buy!<td>
-        </tr>  
+      <div>
+        <div class="panel panel-default col-md-6">
+          <div class="panel-body">
+            <h3>
+              <%= p.name %>
+             <br/><div class="small text-muted">SKU: <%= p.sku%>
+             <br>Category: <%= p.category.name %></div>
+            </h3>
+            <h2>
+              $ <%= p.price.round(2) %>
+            </h2>
+            <a href="/products/show?id_product=<%=p.id%>" class="btn btn-primary">view</a>
+          </div>
+        </div>
+        </div>  
       <%end%>
-      </tbody>
-    </table>
+    
     </div>
     <div class="panel-footer">
      <%== pagy_bootstrap_nav(@pagy) %>
