--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,17 @@
   <button type="button" class="close" data-dismiss="alert">&times;</button>
 </div>
 <% end %>
+<div class="panel panel-success">
+  <div class="panel-body">
+
+    <%= form_with url: search_products_path, method: "post", class: "form-inline" do |form| %>
+      <%= form.text_field :search_txt, class:"form-control", required: "required" %>
+      <input type="submit" class="btn btn-default" value="Search"/>
+    <% end %>
+
+  </div>
+</div>
+
 <div class="panel panel-primary">
   <div class="panel-heading">
   Products
