--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,9 +9,12 @@
 <div class="panel panel-success">
   <div class="panel-body">
 
-    <%= form_with url: search_products_path, method: "post", class: "form-inline" do |form| %>
+    <%= form_with method: "get", local: true, class: "form-inline" do |form| %>
       <%= form.text_field :search_txt, class:"form-control", required: "required" %>
       <input type="submit" class="btn btn-default" value="Search"/>
+      <%= link_to products_path do %>
+        All products
+      <% end  %>
     <% end %>
 
   </div>
@@ -36,6 +39,7 @@
               $ <%= p.price.round(2) %>
             </h2>
             <a href="/products/show?id_product=<%=p.id%>" class="btn btn-primary">view</a>
+             Likes: <%= p.likes_count.nil? ? 0 :  p.likes_count   %>
           </div>
         </div>
         </div>  
