--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,6 +10,7 @@
   <div class="panel-body">
 
     <%= form_with method: "get", local: true, class: "form-inline" do |form| %>
+      <%= form.select :order_by, [["Name","name ASC"], ["Most liked","likes_count ASC"]], { prompt: "--Select order by--" }, { class: "form-control", required: true } %>
       <%= form.text_field :search_txt, class:"form-control", required: "required" %>
       <input type="submit" class="btn btn-default" value="Search"/>
       <%= link_to products_path do %>
@@ -39,14 +40,16 @@
               $ <%= p.price.round(2) %>
             </h2>
             
-
-            <%= form_with model: @like, method: "post", class: "form-inline" do |form| %>
-              <a href="/products/show?id_product=<%=p.id%>" class="btn btn-primary">view</a>
-              <%= form.hidden_field :product, value: p.id %> 
-              <%= form.hidden_field :user, value: @user.id %> 
-              <button type="submit" class="btn btn-default" >:)</button>
-              
-            <% end %>
+            
+              <%= form_with model: @like, method: "post", class: "form-inline" do |form| %>
+                <a href="/products/show?id_product=<%=p.id%>" class="btn btn-primary">view</a>
+                <%= form.hidden_field :product, value: p.id %> 
+                <%= form.hidden_field :user, value: @user.id %> 
+                <% if user_signed_in? %>
+                  <button type="submit" class="btn btn-default" >:)</button>
+                <% end %>    
+              <% end %>
+            
              <div id="likes-div">
               <%= render partial: 'likes', locals: {product: p} %>
              </div>
