--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,6 +10,8 @@
   <div class="panel-body">
 
     <%= form_with method: "get", local: true, class: "form-inline" do |form| %>
+
+      <%= form.collection_select(:category, @categories, :id, :name, { prompt: "--Select category--" }, { class: "form-control", required: true }) %>
       <%= form.select :order_by, [["Name","name ASC"], ["Most liked","likes_count ASC"]], { prompt: "--Select order by--" }, { class: "form-control", required: true } %>
       <%= form.text_field :search_txt, class:"form-control", required: "required" %>
       <input type="submit" class="btn btn-default" value="Search"/>
