--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Store</title>
+  <title>SnackStore</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -17,9 +17,14 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="/">Store</a>
+		      <a class="navbar-brand" href="/">SnackStore</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
+           <ul class="nav navbar-nav navbar-left">
+            <li><%= link_to "Kart", orders_path %></li>
+            <li><%= link_to "Purchase log", purchase_log_orders_path %></li>
+           </ul>
+           
            <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
