--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,11 +9,12 @@
 <div class="panel panel-success">
   <div class="panel-body">
 
-    <%= form_with method: "get", local: true, class: "form-inline" do |form| %>
+    <%= form_for @search, url: products_path, method: :get, class: "form-inline", as: :search do |form| %>
 
-      <%= form.collection_select(:category, @categories, :id, :name, { prompt: "--Select category--" }, { class: "form-control", required: true }) %>
-      <%= form.select :order_by, [["Name","name ASC"], ["Most liked","likes_count ASC"]], { prompt: "--Select order by--" }, { class: "form-control", required: true } %>
-      <%= form.text_field :search_txt, class:"form-control", required: "required" %>
+      <%= form.select :category_id, [ [ 'All Categories', 0 ] ]+@categories.collect {|p| [ p.name, p.id ] }, { prompt: "--Select a category--" }, {class: "form-control"} %>
+      <%= form.select :order_by, [["Name","name ASC"], ["Most liked","likes_count ASC"]], { prompt: "--Select order by--" }, { class: "form-control" } %>
+      
+      <%= form.text_field :search_txt, class:"form-control" %>
       <input type="submit" class="btn btn-default" value="Search"/>
       <%= link_to products_path do %>
         All products
@@ -46,7 +47,6 @@
               <%= form_with model: @like, method: "post", class: "form-inline" do |form| %>
                 <a href="/products/show?id_product=<%=p.id%>" class="btn btn-primary">view</a>
                 <%= form.hidden_field :product, value: p.id %> 
-                <%= form.hidden_field :user, value: @user.id %> 
                 <% if user_signed_in? %>
                   <button type="submit" class="btn btn-default" >:)</button>
                 <% end %>    
