--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,8 +11,8 @@
 
     <%= form_for @search, url: products_path, method: :get, class: "form-inline", as: :search do |form| %>
 
-      <%= form.select :category_id, [ [ 'All Categories', '' ] ]+@categories.collect {|p| [ p.name, p.id ] }, { prompt: "--Select a category--" }, {class: "form-control"} %>
-      <%= form.select :order_by, [["Name","name ASC"], ["Most liked","likes_count DESC"]], { prompt: "--Select order by--" }, { class: "form-control" } %>
+      <%= form.select :category_id, [ [ 'All Categories', '0' ] ]+@categories.collect {|p| [ p.name, p.id ] }, { }, {class: "form-control"} %>
+      <%= form.select :order_by, [["Name","name ASC"], ["Most liked","likes_count ASC"]], {  }, { class: "form-control" } %>
       
       <%= form.text_field :search_txt, class:"form-control" %>
       <input type="submit" class="btn btn-default" value="Search"/>
