--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -45,10 +45,10 @@
             
             
               <%= form_with model: @like, method: "post", class: "form-inline", remote: true do |form| %>
-                <a href="/products/show?id_product=<%=p.id%>" class="btn btn-primary">view</a>
+                <%=link_to "View", product_path(p.id), class: "btn btn-primary btn-lg"%>
                 <%= form.hidden_field :product, value: p.id %> 
                 <% if user_signed_in? %>
-                  <button type="submit" class="btn btn-default" >:)</button>
+                  <button type="submit" class="btn btn-default btn-lg" ><i class="fas fa-hand-peace"></i></button>
                 <% end %>    
               <% end %>
             
