--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,9 @@
   <button type="button" class="close" data-dismiss="alert">&times;</button>
 </div>
 <% end %>
-<div class="panel panel-success">
+  
+
+<div class="panel panel-primary">
   <div class="panel-body">
 
     <%= form_for @search, url: products_path, method: :get, class: "form-inline", as: :search do |form| %>
@@ -23,17 +25,21 @@
 
   </div>
 </div>
+ <div class="panel panel-primary">
+  <div class="panel-body">
+    <%=link_to "Add new product", new_product_path, class: "btn btn-primary btn-lg"%>
+  </div>
+ </div>
 
 <div class="panel panel-primary">
-  <div class="panel-heading">
-  Products
-  </div>  
+    
   <div class="panel-body">
     
       <% @products_list.each_with_index do |p, index| %>
       <div>
         <div class="panel panel-default col-md-6">
           <div class="panel-body">
+            <%= image_tag(p.thumb) %>
             <h3>
               <%= p.name %>
              <br/><div class="small text-muted">SKU: <%= p.sku%>
@@ -55,9 +61,16 @@
              <div id="likes-div">
               <%= render partial: 'likes', locals: {product: p} %>
              </div>
+             <%if @user and @user.has_role? :admin%>
+              <hr>
+               <%=link_to "Edit", edit_product_path(p.id), class: "btn btn-success btn-lg"%>
+               <%=link_to "Remove", product_path(p.id), method: :delete, class: "btn btn-danger btn-lg", data: {confirm: "Do you want to remove the product?"}  %>
+             <%end%> 
+
           </div>
         </div>
         </div>  
+       
       <%end%>
     
     </div>
