--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,7 @@
       <div class="row">
         <div>
           <div class="col-md-6">
-            <img src="#" height="300" width="300"> 
+            <%= image_tag(@product.thumb) %>
             <h2>
               <%=@product.name%><br/>
               <small>SKU: <%=@product.sku%><br/>
