--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -25,12 +25,13 @@
 
   </div>
 </div>
+ <%if @user and @user.has_role? :admin%>
  <div class="panel panel-primary">
   <div class="panel-body">
     <%=link_to "Add new product", new_product_path, class: "btn btn-primary btn-lg"%>
   </div>
  </div>
-
+<%end%>
 <div class="panel panel-primary">
     
   <div class="panel-body">
