--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,6 +1,7 @@
 
 
-
+<div class="panel panel-primary">
+<div class="panel-body">
 <%= form_with model: product, local: true  do |form| %>
 <% if @product.image.attached?%>
               <%= image_tag(@product.thumb) %>
@@ -20,19 +21,19 @@
 <div class="form-group raw">
    <label for="product_name" class="col-md-2">Name:</label>
   <div class="col-md-8">
-  <%= form.text_field :name, class: "form-control "%>
+  <%= form.text_field :name, class: "form-control ", required: true %>
   </div>
 </div><br/>
 <div class="form-group raw">
    <label for="product_stock" class="col-md-2">Stock:</label>
   <div class="col-md-8">
-  <%= form.text_field :stock, class: "form-control "%>
+  <%= form.number_field :stock, min: 1, class: "form-control ", required: true%>
   </div>
 </div><br/>
 <div class="form-group raw">
    <label for="product_price" class="col-md-2">Price:</label>
   <div class="col-md-8">
-  <%= form.text_field :price, class: "form-control "%>
+  <%= form.number_field :price, min: 1, step: 0.01, class: "form-control ", required: true%>
   </div><br/>
 </div>
 <div class="form-group raw">
@@ -42,5 +43,8 @@
   </div>
 </div>
 <br/>
-  <%= form.submit class: "btn btn-success" %>
+<br/>
+  <%= form.submit class: "btn btn-success btn-lg" %>
 <% end %>
+</div>
+</div>
