--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,7 @@
 <h1>New Product</h1>
-
+<div class="panel panel-primary">
+  <div class="panel-body">
+    <%=link_to "Products list", products_path, class: "btn btn-primary btn-lg"%>
+  </div>
+ </div>
 <%= render partial: 'form', locals: {product: @product} %>
