--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,12 @@
 <br/>
 <h1>Buy a product.</h1>
 <div class="panel panel-primary">
+  <div class="panel-body">
+    <%=link_to "Products list", products_path, class: "btn btn-primary btn-lg"%>
+  </div>
+ </div>
+ 
+<div class="panel panel-primary">
     <div class="panel-body">
       <div class="row">
         <div>
@@ -25,7 +31,7 @@
         </div>
         <div class="col-md-6">
           <h3>Products available: <%=@product.stock%></h3>
-          
+          <%if !current_user or !current_user.has_role?(:admin)%>
           <%= form_for(Order.new) do |f| %>
             <div class="form-group">
               <%= label_tag(:quantity, "Amount to buy:") %>
@@ -33,9 +39,14 @@
               <%= f.hidden_field :product_id, value: @product.id %> 
               <%= f.hidden_field :purchase_id, value: @purchase.id %>            
               <%= f.submit "Add to cart", class:"btn btn-success"%>
-              
             </div>
           <% end %>
+          <%end%>
+          <%if current_user and current_user.has_role?(:admin)%>
+          <hr>
+          <%=link_to "Edit", edit_product_path(@product.id), class: "btn btn-success btn-lg"%>
+          <%=link_to "Remove", product_path(@product.id), method: :delete, class: "btn btn-danger btn-lg", data: {confirm: "Do you want to remove the product?"}  %>
+          <%end%>
         </div>
       </div>
     </div>
