refactor purchase and model comments

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,9 @@
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
            <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to "Kart", orders_path %></li>
-            <li><%= link_to "Purchase log", purchase_log_orders_path %></li>
+            <li><%= link_to "Kart", purchases_path %></li>
+           
+          
            </ul>
            
            <ul class="nav navbar-nav navbar-right">
