--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -7,6 +7,8 @@
   <button type="button" class="close" data-dismiss="alert">&times;</button>
 </div>
 <% end %>
+ <li><%= link_to "My Purchase log", purchase_log_purchases_path %></li>
+
 <div class="panel panel-default">
     
     <div class="panel-body">
@@ -64,7 +66,7 @@
         <div>
         <div>
           <% if user_signed_in? %>  
-            <%= form_for @purchase, url: purchase_orders_path,  method: :post do |f| %>
+            <%= form_for @purchase, method: :patch do |f| %>
               <%= f.hidden_field :total, value: sum_total %>
               <%= f.submit "Purchase", class:"btn btn-success btn-lg"%>
             
