--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -47,6 +47,36 @@
           <%=link_to "Remove", product_path(@product.id), method: :delete, class: "btn btn-danger btn-lg", data: {confirm: "Do you want to remove the product?"}  %>
           <%end%>
         </div>
+        
       </div>
     </div>
 </div>
+<br/>
+<div class="panel panel-primary">
+  <div class="panel-body">
+    <h1>Comments:</h1>
+    <div class="panel panel-default">
+      <table class="table table-hover table-striped">
+
+        <%@comments. each do |c|%>
+        <tr>
+          <td>
+           <small class="text-muted">
+              <strong><%=c.user.username%>:</strong><br/>
+              <%=c.created_at.getlocal.strftime("%m/%d/%Y at %I:%M %p")%>
+           </small><br/>
+            <%=c.content%><br/>
+            
+          </td>  
+        </tr>  
+        <%end%>
+      </table>
+    </div>
+    <% if current_user%>
+      <h1>New Comment</h1>
+
+      <%= render 'comments/form' %>
+    <%end%>
+  </div>  
+</div>
+
