--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 				<div id="navbar" class="navbar-collapse collapse">
            <ul class="nav navbar-nav navbar-left">
             <li><%= link_to "Kart", purchases_path %></li>
-           
+            <li><%= link_to "Users", users_path %></li>
           
            </ul>
            
