--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -15,7 +15,7 @@
    <label for="product_image" class="col-md-2">Image:</label>
   <div class="col-md-8">
   
-  <%= form.file_field :image, accept: 'image/png,image/gif,image/jpeg'%>
+  <%= form.file_field :image, accept: 'image/png'%>
   </div>
 </div><br/>
 <div class="form-group raw">
